hphp/test/zend/good/tests/classes/visibility_001b.php.expectf

Fatal error: Access level to fail::f1() must be public (as in class same) or weaker in %s/visibility_001b.php on line 21
